name:             br0ns-blog
version:          1.0
build-type:       Simple
cabal-version:    >=1.2

executable site
  hs-source-dirs: .
  main-is:        site.hs
  ghc-options:    -O2 -Wall -threaded
  build-depends:  base
                , blaze-html
                , bytestring
                , containers
                , directory
                , exceptions
                , filepath
                , hakyll
                , io-streams
                , mtl
                , pandoc
                , pandoc-types
                , process
                , regex-compat-tdfa
                , regex-tdfa
                , split
                , stm
                , text
                , time
                , time-locale-compat
                , transformers
                , unix
                , utf8-string
                , websockets
